--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPgxWhKD6aHxngPwkeeCdx1",
+      "authorship_tag": "ABX9TyMBMuawkgpXatp93lMD671X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,119 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/bolof2000/daily-checkin/blob/master/hard.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The finalize() method is a protected and non-static method of the java.lang.Object class and is also sometimes called the finalizer. The finalize() method is invoked by the JVM when an object is garbage collected. A user can override the finalize() in his class to dispose of system resources or to perform cleanup tasks.\n",
+        "\n",
+        "**Generics **\n",
+        "Generics help with the following use-cases\n",
+        "\n",
+        "Enforcing stronger type checking at compile time for greater type-safety\n",
+        "\n",
+        "Elimination of casts\n",
+        "\n",
+        "Implementation of generic algorithms\n",
+        "\n",
+        "\n",
+        "\n",
+        "A mutex allows only a single thread to access a resource. It forces competing threads to serialize their access for the requested resource.\n",
+        "\n",
+        "Semaphore, on the other hand, is used for limiting access to a collection of resources. Think of semaphore as having a limited number of permits to give out. If a semaphore has given out all the permits it has, then any new thread that comes along requesting for a permit will be blocked, till an earlier thread with a permit returns it to the semaphor\n",
+        "\n",
+        "\n",
+        "\n",
+        "class Solution:\n",
+        "    def findPeakElement(self, nums: List[int]) -> int:\n",
+        "        \n",
+        "        left =0\n",
+        "        right = len(nums)-1\n",
+        "        while left < right:\n",
+        "            mid = (left+right)//2\n",
+        "            if nums[mid] < nums[mid+1]:\n",
+        "                left = mid+1\n",
+        "            else:\n",
+        "                right = mid\n",
+        "        \n",
+        "        return left \n",
+        "        \n",
+        "\n",
+        "  class Solution:\n",
+        "    def findMin(self, nums: List[int]) -> int:\n",
+        "        \n",
+        "        right = len(nums)-1\n",
+        "        left =0\n",
+        "        \n",
+        "        while left+1 < right:\n",
+        "            mid = (left+right)//2\n",
+        "            \n",
+        "            if nums[mid] < nums[right]:\n",
+        "                right = mid\n",
+        "            else:\n",
+        "                left = mid\n",
+        "        return min(nums[left],nums[right]\n",
+        "\n",
+        "class Solution:\n",
+        "    def findAnagrams(self, s: str, p: str) -> List[int]:\n",
+        "        ns, np = len(s), len(p)\n",
+        "        output = []\n",
+        "        if ns < np:\n",
+        "            return []\n",
+        "        p_count, s_count = [0] * 26, [0] * 26 \n",
+        "        for ch in p:\n",
+        "            p_count[ord(ch) - ord('a')] += 1\n",
+        "        \n",
+        "        for i in range(ns):\n",
+        "            s_count[ord(s[i]) - ord('a')] += 1\n",
+        "            \n",
+        "            if i >= np:\n",
+        "                s_count[ord(s[i - np]) - ord('a')] -= 1\n",
+        "            if p_count == s_count:\n",
+        "                output.append(i - np + 1)\n",
+        "        \n",
+        "        return output"
+      ],
+      "metadata": {
+        "id": "BBX0kbiHuziN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Mongo DB Queries Crud Documents:**\n",
+        "1) Create/Insert Documents into collections.\n",
+        "2) Read documents from collections \n",
+        "3) update documents from collections \n",
+        "4) delete ndocuments from collections \n",
+        "\n",
+        "db.documentName.find(\"data\",)\n"
+      ],
+      "metadata": {
+        "id": "Rbc4VGTXbBda"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "fgrhki99ihAM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Completable Future -\n",
+        "program for aysnc programming\n",
+        "\n",
+        "Using Async programming you can write non blocking code where concurrently yhou canrun N no of tasks in a seperate thread without blocking the main thread \n",
+        "when the task is complete,it notifies to the main thread "
+      ],
+      "metadata": {
+        "id": "MeHPmRzQccGY"
+      }
     },
     {
       "cell_type": "code",
@@ -53,6 +166,24 @@
         "  \n",
         "  return res \n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "ShESV69YiKRv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "N6p_BwHJiVsU"
+      }
     },
     {
       "cell_type": "code",
@@ -441,6 +572,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "itLmyLu_a1sH"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from typing import List\n",
@@ -462,8 +602,26 @@
       "metadata": {
         "id": "ydKITy9e27rw"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Java Reflection makes it possible to inspect classes, interfaces, fields, and methods at runtime, without knowing the names of the classes, methods etc. at compile time. It is also possible to instantiate new objects, invoke methods and get/set field values using reflection.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "When to use it?\n",
+        "Anonymous class is only created for one-time use, we cannot reuse it. Let us consider some scenario\n",
+        "\n",
+        "When your only purpose is to override a method.\n",
+        "When you want to implement any functional interface. (We will see it with the help of real-world implementation)."
+      ],
+      "metadata": {
+        "id": "wA_XoYSEB5zs"
+      }
     },
     {
       "cell_type": "code",
@@ -1940,100 +2098,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "The finalize() method is a protected and non-static method of the java.lang.Object class and is also sometimes called the finalizer. The finalize() method is invoked by the JVM when an object is garbage collected. A user can override the finalize() in his class to dispose of system resources or to perform cleanup tasks.\n",
-        "\n",
-        "**Generics **\n",
-        "Generics help with the following use-cases\n",
-        "\n",
-        "Enforcing stronger type checking at compile time for greater type-safety\n",
-        "\n",
-        "Elimination of casts\n",
-        "\n",
-        "Implementation of generic algorithms\n",
-        "\n",
-        "\n",
-        "\n",
-        "A mutex allows only a single thread to access a resource. It forces competing threads to serialize their access for the requested resource.\n",
-        "\n",
-        "Semaphore, on the other hand, is used for limiting access to a collection of resources. Think of semaphore as having a limited number of permits to give out. If a semaphore has given out all the permits it has, then any new thread that comes along requesting for a permit will be blocked, till an earlier thread with a permit returns it to the semaphor\n",
-        "\n",
-        "\n",
-        "\n",
-        "class Solution:\n",
-        "    def findPeakElement(self, nums: List[int]) -> int:\n",
-        "        \n",
-        "        left =0\n",
-        "        right = len(nums)-1\n",
-        "        while left < right:\n",
-        "            mid = (left+right)//2\n",
-        "            if nums[mid] < nums[mid+1]:\n",
-        "                left = mid+1\n",
-        "            else:\n",
-        "                right = mid\n",
-        "        \n",
-        "        return left \n",
-        "        \n",
-        "\n",
-        "  class Solution:\n",
-        "    def findMin(self, nums: List[int]) -> int:\n",
-        "        \n",
-        "        right = len(nums)-1\n",
-        "        left =0\n",
-        "        \n",
-        "        while left+1 < right:\n",
-        "            mid = (left+right)//2\n",
-        "            \n",
-        "            if nums[mid] < nums[right]:\n",
-        "                right = mid\n",
-        "            else:\n",
-        "                left = mid\n",
-        "        return min(nums[left],nums[right]\n",
-        "\n",
-        "class Solution:\n",
-        "    def findAnagrams(self, s: str, p: str) -> List[int]:\n",
-        "        ns, np = len(s), len(p)\n",
-        "        output = []\n",
-        "        if ns < np:\n",
-        "            return []\n",
-        "        p_count, s_count = [0] * 26, [0] * 26 \n",
-        "        for ch in p:\n",
-        "            p_count[ord(ch) - ord('a')] += 1\n",
-        "        \n",
-        "        for i in range(ns):\n",
-        "            s_count[ord(s[i]) - ord('a')] += 1\n",
-        "            \n",
-        "            if i >= np:\n",
-        "                s_count[ord(s[i - np]) - ord('a')] -= 1\n",
-        "            if p_count == s_count:\n",
-        "                output.append(i - np + 1)\n",
-        "        \n",
-        "        return output"
-      ],
-      "metadata": {
-        "id": "BBX0kbiHuziN"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Java Reflection makes it possible to inspect classes, interfaces, fields, and methods at runtime, without knowing the names of the classes, methods etc. at compile time. It is also possible to instantiate new objects, invoke methods and get/set field values using reflection.\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "When to use it?\n",
-        "Anonymous class is only created for one-time use, we cannot reuse it. Let us consider some scenario\n",
-        "\n",
-        "When your only purpose is to override a method.\n",
-        "When you want to implement any functional interface. (We will see it with the help of real-world implementation)."
-      ],
-      "metadata": {
-        "id": "wA_XoYSEB5zs"
-      }
     },
     {
       "cell_type": "markdown",
