--- a/leetcode75.ipynb
+++ b/leetcode75.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "leetcode75.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMkMh8o0dbkiI7SjJSIHKvT",
+      "authorship_tag": "ABX9TyMPVwLwUhB916sC5qyJAo/f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -513,50 +513,6 @@
     {
       "cell_type": "code",
       "source": [
-        "if __name__ == '__main__':\n",
-        "  #print(longestSubstringWithoutRepeatingChar(\"pwwkew\"))\n",
-        "\n",
-        "  nums = [2,7,11,15]\n",
-        "  #print(twoSumUsingDic(nums,9))\n",
-        "\n",
-        " # print(longestSubstringWithoutRepeatingChar(\"babad\"))\n",
-        "  num2 = [-1,0,1,2,-1,-4]\n",
-        "\n",
-        "  #print(threeSum(num2))\n",
-        "\n",
-        "  #print(isValidParenthesis(\"()\"))\n",
-        "\n",
-        "\n",
-        "  intervals = [[1,2],[2,3],[3,4],[1,3]]\n",
-        "  interval2 = [[1,2],[2,3]]\n",
-        "\n",
-        "  print(eraseOverlapIntervals(interval2))\n",
-        "\n",
-        "  data1 = [1,1,1,2,2,3]\n",
-        "  print(topMostFrequentElement(data1,2))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "tp_YsbXPrDxe",
-        "outputId": "7b7d9c93-0001-4f87-c16c-df7b583ef9ec"
-      },
-      "execution_count": 122,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n",
-            "[2, 1]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "from sortedcontainers import SortedList "
       ],
       "metadata": {
@@ -605,10 +561,238 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def powerOfTwo(n):\n",
+        "  i =1 \n",
+        "\n",
+        "  while i < n:\n",
+        "    i *=n \n",
+        "  \n",
+        "  return i ==n"
       ],
       "metadata": {
         "id": "XrKBTmWhcW2O"
+      },
+      "execution_count": 126,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import List \n",
+        "class Solution:\n",
+        "  def letterCombinations(self, digits: str) -> List[str]:\n",
+        "      KEYBOARD = {\n",
+        "      '2': 'abc',\n",
+        "      '3': 'def',\n",
+        "      '4': 'ghi',\n",
+        "      '5': 'jkl',\n",
+        "      '6': 'mno',\n",
+        "      '7': 'pqrs',\n",
+        "      '8': 'tuv',\n",
+        "      '9': 'wxyz'\n",
+        "      }\n",
+        "      \n",
+        "      res = []\n",
+        "      \n",
+        "      def dfs(index,path):\n",
+        "          if len(path)== len(digits):\n",
+        "              res.append(\"\".join(path))\n",
+        "              return \n",
+        "          \n",
+        "          for char in KEYBOARD[digits[index]]:\n",
+        "              path.append(char)\n",
+        "              dfs(index+1,path)\n",
+        "              path.pop()\n",
+        "              \n",
+        "      \n",
+        "      if digits:\n",
+        "          dfs(0,[])\n",
+        "          \n",
+        "      return res"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 365
+        },
+        "id": "BcNa6gU3aiOG",
+        "outputId": "7af04452-04fe-497f-867d-8d6e4610c0c0"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-8e09648df873>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mSolution\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mletterCombinations\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdigits\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m       KEYBOARD = {\n\u001b[1;32m      4\u001b[0m       \u001b[0;34m'2'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'abc'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m       \u001b[0;34m'3'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'def'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-2-8e09648df873>\u001b[0m in \u001b[0;36mSolution\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mSolution\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m   \u001b[0;32mdef\u001b[0m \u001b[0mletterCombinations\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdigits\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mList\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m       KEYBOARD = {\n\u001b[1;32m      4\u001b[0m       \u001b[0;34m'2'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'abc'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m       \u001b[0;34m'3'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'def'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'List' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def word_break(s, words):\n",
+        "    def dfs(start_index):\n",
+        "        if start_index == len(s): # we have constructed the entire target s\n",
+        "            return True\n",
+        "\n",
+        "        for word in words:\n",
+        "            if s[start_index:].startswith(word): # is this a valid path\n",
+        "                if dfs(start_index + len(word)):\n",
+        "                      return True # any path leads to true is fine\n",
+        "\n",
+        "        return False\n",
+        "\n",
+        "    return dfs(0)\n"
+      ],
+      "metadata": {
+        "id": "XoNyh-4TmVIk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import List\n",
+        "\n",
+        "def combination_sum(candidates: List[int], target: int) -> List[List[int]]:\n",
+        "    def dfs(nums, start_index, remaining, path):\n",
+        "        if remaining == 0:\n",
+        "            res.append(path[:])\n",
+        "            return\n",
+        "        for i in range(start_index, len(nums)):\n",
+        "            num = nums[i]\n",
+        "            if remaining - num < 0:\n",
+        "                continue\n",
+        "            dfs(nums, i, remaining - num, path + [num])\n",
+        "    res = []\n",
+        "    dfs(candidates, 0, target, [])\n",
+        "    return res"
+      ],
+      "metadata": {
+        "id": "nQId-v27m0IU"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from typing import List\n",
+        "\n",
+        "def subsets(nums: List[int]) -> List[List[int]]:\n",
+        "    n = len(nums)\n",
+        "\n",
+        "    res = []\n",
+        "    def dfs(i, cur):\n",
+        "        if i == n:\n",
+        "            res.append(cur)\n",
+        "            return\n",
+        "\n",
+        "        dfs(i + 1, cur + [nums[i]])\n",
+        "        dfs(i + 1, cur)\n",
+        "\n",
+        "    dfs(0, [])\n",
+        "\n",
+        "    return res"
+      ],
+      "metadata": {
+        "id": "qrkFlxZdm6lv"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def removeDuplicatesFromSortedArray(nums):\n",
+        "    window = 0 \n",
+        "    for i in range(1,len(nums)):\n",
+        "        if nums[i] != nums[window]:\n",
+        "            window +=1\n",
+        "            nums[window] = nums[i] \n",
+        "    return window+1"
+      ],
+      "metadata": {
+        "id": "7qK5u9TYn5sI"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Z5Nt66Upat3R"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':\n",
+        "  #print(longestSubstringWithoutRepeatingChar(\"pwwkew\"))\n",
+        "\n",
+        "  nums = [2,7,11,15]\n",
+        "  #print(twoSumUsingDic(nums,9))\n",
+        "\n",
+        " # print(longestSubstringWithoutRepeatingChar(\"babad\"))\n",
+        "  num2 = [-1,0,1,2,-1,-4]\n",
+        "\n",
+        "  #print(threeSum(num2))\n",
+        "\n",
+        "  #print(isValidParenthesis(\"()\"))\n",
+        "\n",
+        "\n",
+        "  intervals = [[1,2],[2,3],[3,4],[1,3]]\n",
+        "  interval2 = [[1,2],[2,3]]\n",
+        "\n",
+        " # print(eraseOverlapIntervals(interval2))\n",
+        "\n",
+        "  data1 = [1,1,1,2,2,3]\n",
+        "  #print(topMostFrequentElement(data1,2))\n",
+        "\n",
+        "  print(removeDuplicatesFromSortedArray([1,1,2,2,2,1]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 329
+        },
+        "id": "tp_YsbXPrDxe",
+        "outputId": "7a62befc-4216-41a5-d0c6-b4cf8dd578b8"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-33-ea6ae24f1862>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m   \u001b[0;31m#print(topMostFrequentElement(data1,2))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mremoveDuplicatesFromSortedArray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-32-ad0a8f83b29a>\u001b[0m in \u001b[0;36mremoveDuplicatesFromSortedArray\u001b[0;34m(nums)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnums\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mnums\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mwindow\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mnums\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m       \u001b[0mwindow\u001b[0m \u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m       \u001b[0mnums\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnums\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mwindow\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "foVQqMoFaWSF"
       },
       "execution_count": null,
       "outputs": []
