--- a/hard.ipynb
+++ b/hard.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "hard.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "authorship_tag": "ABX9TyMBMuawkgpXatp93lMD671X",
       "include_colab_link": true
     },
