--- a/hard.ipynb
+++ b/hard.ipynb
@@ -6,7 +6,7 @@
       "name": "hard.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMBMuawkgpXatp93lMD671X",
+      "authorship_tag": "ABX9TyNUCwXpIhMbH8e6KFFwHgaO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -545,7 +545,7 @@
       "metadata": {
         "id": "pjv6jSs5e4Qx"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -558,9 +558,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lyc6qmWdgZb6",
-        "outputId": "a558ebb9-234e-4ddf-9ed4-cab29920df20"
+        "outputId": "0088677f-3774-49f7-d37d-1445442364c3"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -571,6 +571,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "sTRU99YhoMmx"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2224,10 +2235,277 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "class Solution:\n",
+        "    def removeDuplicates(self, s: str, k: int) -> str:\n",
+        "      stack = []  #[char,count]\n",
+        "\n",
+        "      for char in s:\n",
+        "        if stack and stack[-1][0] == char:\n",
+        "          stack[-1][1] +=1\n",
+        "        else:\n",
+        "          stack.append([char,1])\n",
+        "\n",
+        "        if stack[-1][1] ==k:\n",
+        "          stack.pop()\n",
+        "      \n",
+        "      res = \"\"\n",
+        "      for char,count in stack:\n",
+        "        res += (char*count)\n",
+        "      return res \n",
+        "  \n"
       ],
       "metadata": {
         "id": "-XxLwiYEwFfL"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def longestCommonSubsequenceSolution(text1,text2):\n",
+        "  n,m =len(text1),len(text2)\n",
+        "  dp = [[0]*(m+1) for _ in range(n+1)]\n",
+        "\n",
+        "  \"\"\"\n",
+        "  [[0, 0, 0, 0], \n",
+        "  [0, 0, 0, 0], \n",
+        "  [0, 0, 0, 0], \n",
+        "  [0, 0, 0, 0], \n",
+        "  [0, 0, 0, 0], \n",
+        "  [0, 0, 0, 0]]\n",
+        "  \"\"\"\n",
+        "  for row in range(len(text1)+1):\n",
+        "    for col in range(len(text2)+1):\n",
+        "      if text1[row] == text2[col]:\n",
+        "        dp[row][col] = 1+dp[row-1][col-1]\n",
+        "      else:\n",
+        "        dp[row][col]  = max(dp[row-1][col],dp[row][col-1])\n",
+        "  return dp[-1][-1]"
+      ],
+      "metadata": {
+        "id": "uFTzwDaWtvTz"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if __name__ == '__main__':\n",
+        "  longestCommonSubsequenceSolution(\"abcde\",\"ace\")"
+      ],
+      "metadata": {
+        "id": "2hmoSuKepZJ3",
+        "outputId": "0a0896e2-585a-46bb-aee6-a5e8163e585e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def reverseInteger(num:int):\n",
+        "  negative = False \n",
+        "  output = 0 \n",
+        "\n",
+        "  if(num<0):\n",
+        "    num = num*(-1)\n",
+        "    negative = True\n",
+        "  \n",
+        "  while(num >0):\n",
+        "    output = 10*output+(num%10)\n",
+        "    num = num//10\n",
+        "  \n",
+        "  if output > float('inf'):\n",
+        "    return 0 \n",
+        "  if(negative):\n",
+        "    return output*(-1)\n",
+        "  \n",
+        "  return output\n",
+        "  \n"
+      ],
+      "metadata": {
+        "id": "qKFif0lCoOT9"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(reverseInteger(-123))"
+      ],
+      "metadata": {
+        "id": "06M0zJ_4o59C",
+        "outputId": "92e4e449-74d5-4c75-90ed-77be1040a7be",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "-321\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Node:\n",
+        "    def __init__(self, val, next=None):\n",
+        "        self.val = val\n",
+        "        self.next = next"
+      ],
+      "metadata": {
+        "id": "PmcfXPNZrqPE"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def middle_of_linked_list(head: Node) -> int:\n",
+        "    slow = fast = head\n",
+        "    while fast and fast.next:\n",
+        "        fast = fast.next.next\n",
+        "        slow = slow.next\n",
+        "    return slow.val"
+      ],
+      "metadata": {
+        "id": "YPAv5xrvr2UI"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def threeSumClosest(nums,target):\n",
+        "  closest = nums[0]+nums[1]+nums[len(nums)-1]\n",
+        "  nums.sort()\n",
+        "\n",
+        "  for i in range(len(nums)-2):\n",
+        "    left = i+1\n",
+        "    right = len(nums)-1\n",
+        "\n",
+        "    while left < right:\n",
+        "      temp = nums[left]+nums[right]+nums[left]\n",
+        "      if abs(target-temp) < abs(target-closest):\n",
+        "        closest = temp\n",
+        "      if temp == target: return target \n",
+        "      if temp >  target:\n",
+        "        right -=1\n",
+        "      else:\n",
+        "        left +=1\n",
+        "  return closest"
+      ],
+      "metadata": {
+        "id": "yu61T9ts0Pnc"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def minSubArrayLen(nums,s):\n",
+        "\n",
+        "  minLen = float('inf')\n",
+        "  window =0\n",
+        "  summ =0\n",
+        "\n",
+        "  for i in range(len(nums)):\n",
+        "    summ += nums[i]\n",
+        "    while summ >= s:\n",
+        "      minLen = min(minLen,i-window+1)\n",
+        "      summ -= nums[window]\n",
+        "\n",
+        "      window +=1\n",
+        "\n",
+        "  if minLen == float('inf'): return 0 \n",
+        "\n",
+        "  return minLen \n",
+        "                 \n"
+      ],
+      "metadata": {
+        "id": "SUV0U8wuEU1T"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def removeDupChar(s:str):\n",
+        "  stack = []\n",
+        "  res = \"\"\n",
+        "  for char in s:\n",
+        "    if stack and stack[-1][0] ==char:\n",
+        "      stack[-1][1] +=1\n",
+        "    else:\n",
+        "      stack.append([char,1])\n",
+        "    \n",
+        "    if stack[-1][1] >1:\n",
+        "      stack.pop()\n",
+        "  \n",
+        "  for char,count in stack:\n",
+        "    res +=char\n",
+        "  return res \n"
+      ],
+      "metadata": {
+        "id": "iM_UeLdoIZP1"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(removeDupChar(\"abbaca\"))"
+      ],
+      "metadata": {
+        "id": "N1MRTSWMJchb",
+        "outputId": "3a480175-01ee-4097-a53a-7af817a4f109",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ca\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "U0X4DrbVHSLT"
       },
       "execution_count": null,
       "outputs": []
